<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FeFi!</string>
    <string name="app_name">Fe-Fi</string>
<string name="upload_key_prompt">Enter upload key for new card</string>


<string name="upload_key_supplemental">The upload key can be usually found on the computer where you originally activated your Eye-Fi card, in the file C:\\Documents and Settings\\[User]\\Application Data\\Eye-Fi\\Settings.xml</string>
<string name="folder_prompt">Save pictures to...</string>
<string-array name="folder_items"><item>All in one folder</item>
<item>One folder per month</item>
<item>One folder per day</item>
</string-array>
<string name="geotag_enable">Enable Geotagging</string>
<string name="geotag_window">Max timestamp offset (sec)</string>
<string name="geotag_stored">Saved locations</string>
<string name="geotag_clear">Clear saved locations</string>
<string name="geotag_redo">Recalculate geotags</string>
<string name="cardedit_offset">Time offset (sec)</string>
<string name="cardedit_recalculate">Recalculate timestamps</string>
<string name="cardedit_numimages">Images stored</string>

</resources>
